--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "honey-holding",
+  "name": "honey-pharmaceuticals",
   "version": "1.0.0",
   "description": "A full-stack Next.js 15 and Payload CMS solution for Honey Pharmaceuticals Health Industries Group's digital platform. Built to showcase and manage their pharmaceutical and health products distribution services.",
   "license": "MIT",
@@ -8,26 +8,32 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Mohmdev/honey-holding"
+    "url": "https://github.com/mohmdev/honey-pharmaceuticals"
   },
   "scripts": {
+    "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
+    "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
     "postbuild": "next-sitemap --config next-sitemap.config.cjs",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm start",
-    "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
-    "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
-    "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev -p 3000",
+    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev -p 3000",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
+    "generate:importmap": "payload generate:importmap",
+    "generate:schema": "payload-graphql generate:schema",
+    "generate:types": "payload generate:types",
+    "migrate": "payload migrate",
+    "migrate:status": "payload migrate:status",
+    "migrate:down": "payload migrate:down",
+    "migrate:reset": "payload migrate:reset",
+    "migrate:fresh": "payload migrate:fresh",
+    "migrate:create": "payload migrate:create"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/db-postgres": "latest",
     "@payloadcms/live-preview-react": "latest",
-    "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/plugin-form-builder": "latest",
     "@payloadcms/plugin-nested-docs": "latest",
@@ -35,7 +41,7 @@
     "@payloadcms/plugin-search": "latest",
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/ui": "latest",
+    "@payloadcms/storage-s3": "latest",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -47,13 +53,13 @@
     "graphql": "^16.8.2",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.378.0",
-    "next": "^15.0.4",
+    "next": "^15.1.0",
     "next-sitemap": "^4.2.3",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
@@ -61,7 +67,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.0.4",
-    "@payloadcms/eslint-config": "^1.1.1",
+    "@payloadcms/eslint-config": "latest",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -78,6 +84,7 @@
     "typescript": "5.7.2"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0"
+    "node": ">=18.20.2 <23.0.0",
+    "pnpm": ">=9"
   }
 }
