--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-s3": "latest",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.1",
     "babel-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
