--- a/package.json
+++ b/package.json
@@ -76,19 +76,19 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.0.4",
     "@payloadcms/eslint-config": "latest",
+    "@tailwindcss/postcss": "4.0.0-beta.6",
     "@tailwindcss/typography": "^0.5.13",
     "@types/escape-html": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
-    "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "^15.0.4",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "4.0.0-beta.6",
     "typescript": "5.7.2"
   },
   "engines": {
