--- a/components.json
+++ b/components.json
@@ -4,8 +4,8 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "src/app/(frontend)/globals.css",
-    "css": "src/app/(frontend)/globals.css",
+    "config": "src/app/styles/globals.css",
+    "css": "src/app/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
