--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
     "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.cjs",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev -p 3000",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev -p 3000",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack -p 3000",
+    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack -p 3000",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@payloadcms/db-postgres": "latest",
+    "@payloadcms/email-resend": "latest",
     "@payloadcms/live-preview-react": "latest",
-    "@payloadcms/payload-cloud": "latest",
     "@payloadcms/plugin-form-builder": "latest",
     "@payloadcms/plugin-nested-docs": "latest",
     "@payloadcms/plugin-redirects": "latest",
@@ -42,53 +42,62 @@
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-s3": "latest",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.3",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "babel-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "framer-motion": "^11.13.5",
-    "geist": "^1.3.0",
-    "graphql": "^16.8.2",
+    "framer-motion": "^11.14.4",
+    "geist": "^1.3.1",
     "jsonwebtoken": "9.0.2",
-    "lucide-react": "^0.378.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.1.0",
+    "next-themes": "^0.4.4",
     "next-sitemap": "^4.2.3",
     "payload": "latest",
-    "payload-admin-bar": "^1.0.6",
-    "prism-react-renderer": "^2.3.1",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "7.45.4",
+    "react-hook-form": "7.54.1",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "react-use-measure": "^2.1.1",
-    "sharp": "0.32.6",
-    "tailwind-merge": "^2.3.0",
+    "sharp": "^0.33.5",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.0.4",
-    "@payloadcms/eslint-config": "latest",
-    "@tailwindcss/postcss": "4.0.0-beta.6",
-    "@tailwindcss/typography": "^0.5.13",
+    "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/postcss": "4.0.0-beta.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/escape-html": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "22.5.4",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1",
-    "copyfiles": "^2.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "^15.0.4",
-    "postcss": "^8.4.38",
-    "prettier": "^3.0.3",
-    "tailwindcss": "4.0.0-beta.6",
+    "@types/node": "^22.5.4",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "4.0.0-beta.7",
     "typescript": "5.7.2"
   },
   "engines": {
