--- a/components.json
+++ b/components.json
@@ -4,14 +4,17 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "src/app/styles/globals.css",
-    "css": "src/app/styles/globals.css",
+    "config": "src/styles/globals.css",
+    "css": "src/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/utilities"
+    "lib": "@/lib",
+    "utils": "@/lib/utils/cn",
+    "hooks": "@/lib/hooks",
+    "ui": "@/components/ui",
+    "components": "@/components"
   }
 }
