--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.2",
     "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.1",
@@ -68,8 +69,8 @@
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
-    "next-themes": "^0.4.4",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.4",
     "payload": "latest",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
