--- a/components.json
+++ b/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "src/styles/globals.css",
     "css": "src/styles/globals.css",
-    "baseColor": "slate",
+    "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
@@ -16,5 +16,6 @@
     "hooks": "@/lib/hooks",
     "ui": "@/components/ui",
     "components": "@/components"
-  }
+  },
+  "iconLibrary": "lucide"
 }
