--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ PAYLOAD_SECRET=YOUR_SECRET_HERE
 # Used to configure CORS, format links and more. No trailing slash
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
+RESEND_API_KEY=YOUR_RESEND_API_KEY
+
 # S3 bucket configuration
 S3_BUCKET=YOUR_S3_BUCKET
 S3_ACCESS_KEY=YOUR_S3_ACCESS_KEY
