--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ],
     "paths": {
       "@payload-config": [
-        "./src/payload.config.ts"
+        "src/services/payload.config.ts"
       ],
       "react": [
         "./node_modules/@types/react"
