feat: implement access control functions and roles management; add user role protection and migration setup; Add uploads collections

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,13 @@
     ],
     "paths": {
       "@payload-config": [
-        "src/services/payload.config.ts"
+        "./src/services/payload-config.ts"
+      ],
+      "@/payload-types": [
+        "./src/lib/payload-types.ts"
+      ],
+      "@/access/*": [
+        "./src/CMS/access/*"
       ],
       "react": [
         "./node_modules/@types/react"
