--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "ejs": "^3.1.10",
     "framer-motion": "^11.14.4",
     "geist": "^1.3.1",
     "jsonwebtoken": "9.0.2",
+    "juice": "^11.0.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-sitemap": "^4.2.3",
