chore: add slug field component, revalidate hooks, and update config imports; enhance utility functions and TypeScript paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,12 @@
       "@/access/*": [
         "./src/CMS/access/*"
       ],
+      "@/utils/*": [
+        "./src/lib/utils/*"
+      ],
+      "@/hooks/*": [
+        "./src/lib/hooks/*"
+      ],
       "react": [
         "./node_modules/@types/react"
       ],
