chore: add global error component; refactor imports and file structure; update Prettier configuration

--- a/.prettierignore
+++ b/.prettierignore
@@ -11,5 +11,7 @@
 **/temp
 **/docs/**
 src/services/database/migrations/**/*
+src/app/(payload)/**/*
+!src/app/(payload)/custom.scss
 pnpm-lock.yaml
 package-lock.json
