--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/postcss": "4.0.0-beta.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/escape-html": "^1.0.2",
