refactor(access): update access control logic; remove deprecated access methods; add new access checks for roles; refactor related configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,5 +53,5 @@
     "next.config.ts",
     "next-sitemap.config.js"
   ],
-  "exclude": ["node_modules", ".temp"]
+  "exclude": ["node_modules", ".temp", ".docs"]
 }
