--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexweb-base-template",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A full-stack Next.js 15 and Payload CMS solution for managing your digital platform and it's content.",
   "license": "MIT",
   "type": "module",
@@ -33,6 +33,11 @@
     "migrate:create": "payload migrate:create"
   },
   "dependencies": {
+    "@faceless-ui/css-grid": "^1.2.1",
+    "@faceless-ui/mouse-info": "^1.3.0",
+    "@faceless-ui/slider": "^1.1.17",
+    "@faceless-ui/window-info": "^2.1.2",
+    "@next/bundle-analyzer": "^15.1.1",
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/email-resend": "latest",
     "@payloadcms/live-preview-react": "latest",
@@ -71,12 +76,13 @@
     "jsonwebtoken": "9.0.2",
     "juice": "^11.0.0",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.0",
+    "next": "^15.1.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "payload": "latest",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.54.1",
     "react-icons": "^5.4.0",
@@ -100,7 +106,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.0",
+    "eslint-config-next": "^15.1.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
