chore: add user query and response handling; update theme imports and types; add react-facebook-pixel dependency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "esModuleInterop": true,
-    "target": "ES2022",
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "target": "ES2024",
+    "lib": ["DOM", "DOM.Iterable", "ES2024"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -23,28 +23,31 @@
       }
     ],
     "paths": {
-      "@payload-config": ["src/CMS/payload-config.ts"],
-      "@payload-types": ["src/CMS/payload-types.ts"],
       "@CMS/*": ["src/CMS/*"],
       "@admin-components/*": ["src/CMS/_components/*"],
+      "@access/*": ["src/services/access/*"],
+      "@utils/*": ["src/lib/utils/*"],
+      "@data": ["src/app/_data"],
+      "@data/*": ["src/app/_data/*"],
+      "@dashboard/*": ["./src/app/(frontend)/(dashboard)/dashboard/*"],
+      "@components/*": ["src/components/*"],
+      "@providers": ["src/providers"],
+      "@providers/*": ["src/providers/*"],
+      "@forms/*": ["src/forms/*"],
       "@blocks/*": ["src/blocks/*"],
       "@fields/*": ["src/fields/*"],
-      "@forms/*": ["src/forms/*"],
-      "@components/*": ["src/components/*"],
       "@ui/*": ["src/components/_ui/*"],
       "@graphics/*": ["src/components/_ui/graphics/*"],
       "@icons/*": ["src/components/_ui/icons/*"],
       "@styles/*": ["src/styles/*"],
-      "@providers/*": ["src/providers/*"],
       "@services/*": ["src/services/*"],
-      "@access/*": ["src/services/access/*"],
       "@lib/*": ["src/lib/*"],
-      "@utils/*": ["src/lib/utils/*"],
       "@hooks/*": ["src/lib/hooks/*"],
       "@constants": ["src/lib/constants.ts"],
       "react": ["node_modules/@types/react"],
-      "@data": ["src/app/_data/*"],
-      "@/*": ["src/*"]
+      "@root/*": ["src/*"],
+      "@payload-config": ["src/CMS/payload-config.ts"],
+      "@payload-types": ["src/CMS/payload-types.ts"]
     }
   },
   "include": [
