--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "7.54.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
