--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,15 @@ S3_ENDPOINT=YOUR_S3_ENDPOINT
 
 #####################################################################
 
-# NEXT_PUBLIC_GA_MEASUREMENT_ID
-# NEXT_PUBLIC_FACEBOOK_PIXEL_ID
 # COOKIE_DOMAIN
+# ANALYZE
+# NEXT_PUBLIC_NEWSLETTER_FORM_ID
+
+# Google Tag Manager
+# NEXT_PUBLIC_GA_MEASUREMENT_ID
+
+
+# NEXT_PUBLIC_FACEBOOK_PIXEL_ID
+
+
+# NEXT_PUBLIC_ALGOLIA_DOCSEARCH_KEY
