refactor: Change databae adapter to Mongoose and refactor type checks to match Mongoose schema; number -> string

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Database connection string
-POSTGRES_URI=postgresql://username:password@host:port/database
+# POSTGRES_URI=postgresql://username:password@host:port/database
+DATABASE_URI=""
+DATABASE_NAME="staging"
 
 # Used to encrypt JWT tokens
 PAYLOAD_SECRET=YOUR_SECRET_HERE
