--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@faceless-ui/slider": "^1.1.17",
     "@faceless-ui/window-info": "^2.1.2",
     "@next/bundle-analyzer": "^15.1.2",
-    "@payloadcms/db-postgres": "latest",
+    "@payloadcms/db-mongodb": "latest",
     "@payloadcms/email-resend": "latest",
     "@payloadcms/live-preview-react": "latest",
     "@payloadcms/plugin-form-builder": "latest",
