feat(caching): refactor global settings data retrival and caching machenasim; update favicon handling with caching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
       "@admin-components/*": ["src/CMS/_components/*"],
       "@access/*": ["src/services/access/*"],
       "@utils/*": ["src/lib/utils/*"],
-      "@data": ["src/app/_data"],
-      "@data/*": ["src/app/_data/*"],
+      "@data": ["src/_data"],
+      "@data/*": ["src/_data/*"],
       "@dashboard/*": ["./src/app/(frontend)/(dashboard)/dashboard/*"],
       "@components/*": ["src/components/*"],
       "@providers": ["src/providers"],
