--- a/package.json
+++ b/package.json
@@ -102,21 +102,31 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@tailwindcss/postcss": "4.0.0-beta.7",
+    "@tailwindcss/postcss": "4.0.0-beta.8",
     "@tailwindcss/typography": "^0.5.15",
     "@types/escape-html": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "4.0.0-beta.7",
-    "typescript": "5.7.2"
+    "tailwindcss": "4.0.0-beta.8",
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.18.2"
   },
   "engines": {
     "node": ">=18.20.2 <23.0.0",
