--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
   "npm.packageManager": "pnpm",
+  "typescript.tsdk": "node_modules/typescript/lib",
+  //
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.formatOnSaveMode": "file",
-  "typescript.tsdk": "node_modules/typescript/lib",
-  // TypeScript/JavaScript/React/JSX
+  "eslint.format.enable": true,
+  "eslint.codeActionsOnSave.mode": "all",
+  //
+  // TypeScript/JavaScript/React
   "[javascript][typescript][typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "always"
+      "source.fixAll.eslint": "explicit",
+      "source.fixAll": "explicit"
     }
   },
   // Others
