refactor: remove payloadToken; introduce new constants for theme and cookie management; update import paths across the application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,7 @@
       "@services/*": ["src/services/*"],
       "@lib/*": ["src/lib/*"],
       "@hooks/*": ["src/lib/hooks/*"],
-      "@constants": ["src/lib/constants.ts"],
+      "@constants": ["src/lib/constants/constants.ts"],
       "@app/*": ["src/app/*"],
       "@root/*": ["src/*"]
     },
